<resources>
    <string name="app_name">miadot</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="perfil">Foto do perfil</string>
    <string name="profile_picture_desc">Foto de perfil do usuário</string>
    <string name="profile_user_name">Nome do Usuário</string>
    <string name="profile_nickname">apelido</string>
    <string name="profile_animals_count">0 animais cadastrados</string>
    <string name="profile_pets_count">0</string>
    <string name="profile_pets">Pets</string>
    <string name="profile_followers_count">0</string>
    <string name="profile_followers">Seguidores</string>
    <string name="profile_following_count">0</string>
    <string name="profile_following">Seguindo</string>
    <string name="profile_edit_button">Editar perfil</string>
    <string name="feed_like">Curtir</string>
    <string name="feed_comment">Comentar</string>
    <string name="feed_share">Compartilhar</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_edit_photo">Editar foto de perfil</string>
    <string name="notification_example">Notificação exemplo</string>
    <string name="badge_nova_mensagem">Nova mensagem</string>
    <string name="nome_usuario_exemplo">Nome do Usuário</string>
    <string name="ultima_mensagem_exemplo">Última mensagem recebida…</string>
    <string name="data_chat_exemplo">12:34</string>
    <string name="mensagem_chat_exemplo">Olá! Esta é uma mensagem de exemplo…</string>
    <string name="hora_chat_exemplo">12:34</string>
    <string name="status_mensagem">Status da mensagem</string>
    <string name="icone_notificacao">Ícone de notificação</string>
    <string name="mensagem_notificacao_exemplo">Você tem uma nova notificação!</string>
    <string name="data_notificacao_exemplo">Agora mesmo</string>
    <string name="ver_mais_comentarios">Ver mais comentários</string>
    <string name="tenho_interesse">Tenho Interesse</string>
    <string name="mensagens">Mensagens</string>
    <string name="chat_privado">Chat Privado</string>
    <string name="nova_conversa">Nova Conversa</string>
    <string name="sem_mensagens">Nenhuma mensagem ainda</string>
    <string name="erro_carregar_chat">Erro ao carregar chat</string>
    <string name="erro_enviar_mensagem">Erro ao enviar mensagem</string>
    <string name="digite_sua_mensagem">Digite sua mensagem...</string>
    <string name="interesse_animal">Tenho interesse neste animal</string>
    <string name="conversa_iniciada">Conversa iniciada com o dono do animal</string>
</resources>