<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageIcone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_notifications_black_24dp"
        android:contentDescription="@string/icone_notificacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textMensagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_notificacao_exemplo"
        android:textColor="#222"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/imageIcone"
        app:layout_constraintTop_toTopOf="@id/imageIcone"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_notificacao_exemplo"
        android:textColor="#888"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/imageIcone"
        app:layout_constraintTop_toBottomOf="@id/textMensagem"
        app:layout_constraintBottom_toBottomOf="@id/imageIcone"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
